--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>task01</module>
         <module>task02</module>
+        <module>task03</module>
     </modules>
 
 
