added control task

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>task01</module>
         <module>task02</module>
         <module>task03</module>
+        <module>control-task</module>
     </modules>
 
 
