added 4-1 task, added 4-2 task (refactored 2-2)

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>task02</module>
         <module>task03</module>
         <module>control-task</module>
+        <module>task04</module>
     </modules>
 
 
