--- a/control-task/pom.xml
+++ b/control-task/pom.xml
@@ -32,11 +32,10 @@
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
+            <artifactId>hamcrest</artifactId>
             <version>2.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 
 </project>
