--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,17 @@
     <artifactId>java-tasks</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <modules>
         <module>task01</module>
         <module>task02</module>
         <module>task03</module>
         <module>control-task</module>
         <module>task04</module>
+        <module>task05</module>
     </modules>
-
 
 </project>
