--- a/task02/pom.xml
+++ b/task02/pom.xml
@@ -10,26 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>task02</artifactId>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>7</source>
-                    <target>7</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.6.0-RC1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 
 </project>
